get new changes

--- a/src/app/view/eventadd/eventadd.component.html
+++ b/src/app/view/eventadd/eventadd.component.html
@@ -129,7 +129,7 @@
                     </div>    
                     <div class="form_row clearfix">
                         <label>Contact Info<span class="indicates">*</span></label>
-                        <input [textMask]="{mask: mask}" type="tel" [(ngModel)]="contact_info" id="contactinfo" name="contact_info" value="" class="form-control textfield">
+                        <input type="tel" [(ngModel)]="contact_info" id="contactinfo" name="contact_info" value="" class="form-control textfield">
                         <span class="errfield">{{contact}}</span>                          
                     </div>
                     <div class="form_row clearfix">
