add venue section

--- a/src/app/view/layouts/footer/footer.component.html
+++ b/src/app/view/layouts/footer/footer.component.html
@@ -27,7 +27,7 @@
     </div>
     <!-- .sidebar-wrap -->
 </aside>
-
+ <ng2-toasty [position]="'top-center'" ></ng2-toasty>
 <!-- Footer Start-->
 <div id="footer" class="clearfix">
     <section class="footer_top clearfix">
