--- a/src/app/view/layouts/header/header.component.html
+++ b/src/app/view/layouts/header/header.component.html
@@ -10,7 +10,7 @@
 </head>
 <body class="wordpress home singular singular-page layout-default tevolution-event-manager event-front-page location_manager mobile-header">
 
-
+     <ng2-toasty [position]="'top-center'" ></ng2-toasty>
     <div id="container" class="container-wrap">
         <header class="header_container clearfix">
             <div class="primary_menu_wrapper clearfix">
