--- a/src/app/view/venues-add/venues-add.component.html
+++ b/src/app/view/venues-add/venues-add.component.html
@@ -8,7 +8,7 @@
                     </span><span class="sep">»</span><a [routerLink]="['/my-venues']" title="Organizations" class="trail-begin">Venue List</a> <span class="sep">»</span> <span>Add Venue</span>
             </div>
         </div>
-
+        <ng2-toasty [position]="'top-center'" ></ng2-toasty>
         <!-- start content part-->
         <div id="content" role="main" class="large-9 small-12 columns" jstcache="0">
             <div class="event-add">
@@ -29,8 +29,8 @@
                     <div class="form_row clearfix">
                         <label>Venue Name<span class="indicates">*</span></label>
                         <input type="text" name="venue_name" id="" value="" class="form-control textfield" ngModel> 
-                        <ul class="error" *ngIf="errors['organization_name']!=''" >
-                        <li *ngFor="let org_err of errors['organization_name']" >
+                        <ul class="error" *ngIf="errors['venue_name']!=''" >
+                        <li *ngFor="let org_err of errors['venue_name']" >
                           {{org_err}}  
 
                         </li>    
@@ -40,8 +40,8 @@
                     <div class="form_row clearfix">
                         <label>Venue Description <span class="indicates">*</span></label>
                         <textarea class="form-control" name="venue_description" rows="6" ngModel></textarea>
-                         <ul class="error" *ngIf="errors['organization_description']!=''" >
-                        <li *ngFor="let org_err of errors['organization_description']" >
+                         <ul class="error" *ngIf="errors['venue_description']!=''" >
+                        <li *ngFor="let org_err of errors['venue_description']" >
                           {{org_err}}  
 
                         </li>    
@@ -53,7 +53,13 @@
                         <select class="form-control" name="country" ngModel>
                             <option *ngFor="let country of countryList" value="{{country.id}}" (click)="getState(country.id)" >{{country.name}}</option>
                         </select>
-                        <span id="user_loginInfo">{{country}}</span> 
+                        <ul class="error" *ngIf="errors['country']!=''" >
+                        <li *ngFor="let org_err of errors['country']" >
+                          {{org_err}}  
+
+                        </li>    
+
+                        </ul> 
                     </div>
 
                     <div class="form_row clearfix">
@@ -61,7 +67,13 @@
                         <select class="form-control" name="state" ngModel>
                             <option *ngFor="let state of stateList" value="{{state.state_id}}" (click)="getCIty(state.state_id)" >{{state.name}}</option>
                         </select>
-                        <span id="user_loginInfo">{{state}}</span> 
+                        <ul class="error" *ngIf="errors['state']!=''" >
+                        <li *ngFor="let org_err of errors['state']" >
+                          {{org_err}}  
+
+                        </li>    
+
+                        </ul> 
                     </div>
                     <div class="form_row clearfix">
                         <label>City</label>
@@ -72,7 +84,14 @@
                     </div>
                     <div class="form_row clearfix">
                         <label>Street Address</label>
-                        <textarea class="form-control" name="venue_address" ngModel></textarea>
+                        <textarea class="form-control" name="address" ngModel></textarea>
+                        <ul class="error" *ngIf="errors['address']!=''" >
+                        <li *ngFor="let org_err of errors['address']" >
+                          {{org_err}}  
+
+                        </li>    
+
+                        </ul> 
                         <br>    
                         <a class="btn btn-success btn-sm btn-square active add_map" (click)="getLatLong()" >Find Location</a>
                     </div>
