--- a/src/app/view/my-venues/my-venues.component.html
+++ b/src/app/view/my-venues/my-venues.component.html
@@ -11,23 +11,23 @@
             
 			<!-- start content part-->
 
-		
+			<ng2-toasty [position]="'top-center'" ></ng2-toasty>
 			<div id="content" role="main" class="col-md-12 col-sm-12 columns">
 			  <h1 class="loop-title venue_btn">Venue <a class="btn btn-warning pull-right" href="" [routerLink]="['/venues-add']">Add Venue</a></h1>
 				<div class="form-group organization_div row"  *ngFor = "let venue of venueArr">
 					<div class="col-md-8">
-					  <div class="venue-logo col-sm-6">
-						<img src="{{venue.images[0].image_url}}"  title="{{venue.images.image_title}}">
+					  <div class="venue-logo col-sm-6" style="width: 30%;">
+						<img src="{{venue.images[0].image_url}}"  title="{{venue.images.image_title}}" style="width: 270px; height: 150px;">
 					</div>
                    <div class="right_box form-horizontal col-sm-6">
                    <h2> <a [routerLink]="['/venue',venue.venue_id]">{{venue.venue_name}}</a></h2>
                    <div class="user_dsb">
-							<div class="form-group" *ngIf="venue.venue_location!=''">
+							<div class="form-group" *ngIf="venue.address">
 								<label class="col-sm-1 col-xs-2 control-label"><i class="fa fa-map-marker"></i></label>
 								<span class="col-sm-10 col-xs-10">{{venue
 								.address}}</span>
 							</div>
-							<div class="form-group" *ngIf="venue.venue_email!=''">
+							<div class="form-group" *ngIf="venue.city">
 								<label class="col-sm-1 control-label"><i class="fa fa-building-o"></i></label>
 								<span class="col-sm-10">{{venue.city}}</span>
 							</div>
@@ -45,8 +45,6 @@
 					</div>
 					<div class="col-sm-4 pull-right ">
 						<label class="venue_btn"><a class="btn btn-xs primary" href="" [routerLink] = "['/venues-edit',venue.venue_id]">Edit venue</a></label>
-						<label class="venue_btn"><a class="btn btn-xs primary" href="javascript:void(0)">Invite</a></label>
-						<label class="venue_btn"><a class="btn btn-xs primary" href="javascript:void(0)">Join</a></label>
 					    <label class="venue_btn"><a class="btn btn-xs primary" href="javascript:void(0)"(click)="modal_id.open('sm');setDeleteID(venue.venue_id);">Delete</a></label>
 					</div>					
 				</div>
@@ -79,6 +77,6 @@
   
     <modal-footer>
             <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-            <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="deleteOrg()">Ok</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" (click)="deleteVenue()">Ok</button>
         </modal-footer>
 </modal>
