--- a/src/app/view/venue/venue.component.html
+++ b/src/app/view/venue/venue.component.html
@@ -5,7 +5,7 @@
         <div class="breadcrumb breadcrumbs columns">
             <div class="breadcrumb-trail">
                 <span class="trail-begin">
-                    <a [routerLink]="['/']" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <span class="trail-end"><a [routerLink] = "['/my-venues']" >Venue List</a></span><span class="sep">»</span> <span class="trail-end">{{detailArr.organization_name}}</span>
+                    <a [routerLink]="['/']" title="GeekMeet" rel="home" class="trail-begin">Home</a></span> <span class="sep">»</span> <span class="trail-end"><a [routerLink] = "['/my-venues']" >Venue List</a></span><span class="sep">»</span> <span class="trail-end">{{detailArr.venue_name}}</span>
             </div>
         </div>
 
@@ -13,37 +13,35 @@
         <div id="content" role="main" class="large-9 small-12 columns">
             <div class="form-group">
                 <div class="col-sm-12">
-                    <label class="pull-right"><a class="btn btn-md primary" href="" [routerLink] = "['/organization-edit',detailArr.organization_id]">Edit Venue</a></label>
-                    <label class="pull-right"><a class="btn btn-md primary" href="javascript:void(0)">Invite</a></label>
-                    <label class="pull-right"><a class="btn btn-md primary" href="javascript:void(0)">Join</a></label>
+                    <label class="pull-right"><a class="btn btn-md primary" href="" [routerLink] = "['/venues-edit',detailArr.venue_id]">Edit Venue</a></label>
                 </div>
             </div>
             <div class="author_cont">
                 <!-- Author photo on left side start -->
                 <div class="organization-logo">
-                    <img src="{{detailArr.organization_logo}}" title="{{detailArr.title}}">
+                    <img src="{{imageArr.image_url}}" title="{{imageArr.image_title}}" style="height: 200px;">
                 </div>
                 <!-- Author photo on left side end -->
 
                 <!-- Author photo on right side start -->
                 <div class="right_box form-horizontal">
-                    <h2>{{detailArr.organization_name}}</h2>
+                    <h2>{{detailArr.venue_name}}</h2>
                     <div class="user_dsb">
-                        <div class="form-group" *ngIf="detailArr.organization_location!=''">
+                        <div class="form-group" *ngIf="detailArr.address">
                             <label class="col-sm-1 col-xs-2 control-label"><i class="fa fa-map-marker"></i></label>
-                            <span class="col-sm-10 col-xs-10">{{ detailArr.organization_location }}</span>
+                            <span class="col-sm-10 col-xs-10">{{ detailArr.address }}</span>
                         </div>
-                        <div class="form-group" *ngIf="detailArr.organization_email!=''">
+                        <div class="form-group" *ngIf="detailArr.country_name">
                             <label class="col-sm-1 control-label"><i class="fa fa-envelope-o"></i></label>
-                            <span class="col-sm-10">{{ detailArr.organization_email }}</span>
+                            <span class="col-sm-10">{{ detailArr.country_name }}</span>
                         </div>
-                        <div class="form-group" *ngIf="detailArr.organization_contact!=''">
+                        <div class="form-group" *ngIf="detailArr.state_name">
                             <label class="col-sm-1 control-label"><i class="fa fa-phone"></i></label>
-                            <span class="col-sm-10">{{ detailArr.organization_contact }}</span>
+                            <span class="col-sm-10">{{ detailArr.state_name }}</span>
                         </div>
-                        <div class="form-group" *ngIf="detailArr.organization_website!=''">
+                        <div class="form-group" *ngIf="detailArr.city_name">
                             <label class="col-sm-1 control-label"><i class="fa fa-globe"></i></label>
-                            <span class="col-sm-10">{{ detailArr.organization_website }}</span>
+                            <span class="col-sm-10">{{ detailArr.city_name }}</span>
                         </div>
                     </div>
 
@@ -53,7 +51,7 @@
             <div class="entry-content event-description">
                 <h2>About <small></small></h2>
                 <div class="entry-content frontend-entry-content ">
-                    <p [innerHTML]="detailArr.organization_description">
+                    <p [innerHTML]="detailArr.venue_description">
                     </p>
                 </div>
                  </div>
