--- a/src/app/view/index/index.component.html
+++ b/src/app/view/index/index.component.html
@@ -128,6 +128,7 @@
                             <div class="textwidget text-center">	
                                 <a href="">
                                     <img src="app/assets/images/ads images/728x90.jpg">
+                                    <ins data-revive-zoneid="4" data-revive-id="be6186b004d5136eb9e247010ad156eb"></ins>
                                 </a>	
                             </div>
                         </div>
@@ -227,6 +228,7 @@
                     <div class="textwidget text-center">	
                         <a href="">
                             <img src="app/assets/images/ads images/300x600.jpg">
+                            <ins data-revive-zoneid="6" data-revive-id="be6186b004d5136eb9e247010ad156eb"></ins>
                         </a>	
                     </div>
                 </div>
