--- a/src/app/view/event/event.component.html
+++ b/src/app/view/event/event.component.html
@@ -21,7 +21,7 @@
                 <div class="widget-wrap widget-inside">		
                     <div class="textwidget text-center">	
                         <a href="">                            
-                            <img src="app/assets/images/ads images/728x90.jpg">
+                            <!--<img src="app/assets/images/ads images/728x90.jpg">-->
                             <ins data-revive-zoneid="7" data-revive-id="be6186b004d5136eb9e247010ad156eb"></ins>
                         </a>	
                     </div>
