--- a/src/app/view/index/index.component.html
+++ b/src/app/view/index/index.component.html
@@ -127,7 +127,7 @@
                         <div class="widget-wrap widget-inside">		
                             <div class="textwidget text-center">	
                                 <a href="">
-                                    <img src="app/assets/images/ads images/728x90.jpg">
+                                    <!--<img src="app/assets/images/ads images/728x90.jpg">-->
                                     <ins data-revive-zoneid="4" data-revive-id="be6186b004d5136eb9e247010ad156eb"></ins>
                                 </a>	
                             </div>
@@ -227,7 +227,7 @@
                 <div class="widget-wrap widget-inside m-t-20">		
                     <div class="textwidget text-center">	
                         <a href="">
-                            <img src="app/assets/images/ads images/300x600.jpg">
+                            <!--<img src="app/assets/images/ads images/300x600.jpg">-->
                             <ins data-revive-zoneid="6" data-revive-id="be6186b004d5136eb9e247010ad156eb"></ins>
                         </a>	
                     </div>
